[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/entities/npc/NPC.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/character/npc/Townfolk-Adult-M-007.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 27, 69, 18, 27 )

[sub_resource type="Animation" id=3]
resource_name = "up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ SubResource( 2 ), SubResource( 2 ), SubResource( 2 ) ]
}

[node name="NPC" type="KinematicBody2D"]
scale = Vector2( 1.2, 1.3 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/up = SubResource( 3 )

[node name="MoveTween" type="Tween" parent="."]

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -32, 0 )

[node name="RayCastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )

[node name="RayCastUp" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -32 )

[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]
